# tiny-graph-RAG

./: .env.example  .gitignore  README.md  config.yaml  inference.py  main.py  pyproject.toml  streamlit_app.py
data/: eval_sample.jsonl
data/novels/: 김유정-동백꽃-KG.json  김유정-동백꽃-eval.jsonl  김유정-동백꽃-hardset.jsonl  이상-날개-KG.json  이상-날개-eval.jsonl  이상-날개-hardset.jsonl  이효석-모밀꽃-필-무렵-KG.json  이효석-모밀꽃-필-무렵-eval.jsonl  이효석-모밀꽃-필-무렵-hardset.jsonl  현진건-운수좋은날-KG.json  현진건-운수좋은날-eval.jsonl  현진건-운수좋은날-hardset.jsonl
docs/: README.md  entity-resolution.md  evaluation.md
logs/: 26-02-08.md
mini_graph_rag/: __init__.py  config.py
mini_graph_rag/chunking/: __init__.py  chunker.py
mini_graph_rag/extraction/: __init__.py  extractor.py  parser.py  prompts.py
mini_graph_rag/graph/: __init__.py  builder.py  models.py  storage.py
mini_graph_rag/llm/: __init__.py  client.py  prompts.py
mini_graph_rag/retrieval/: __init__.py  ranking.py  retriever.py  traversal.py
mini_graph_rag/visualization/: __init__.py  pyvis_visualizer.py
scripts/: apply_er.py
tests/: test_evaluation.py  test_extraction.py  test_graph.py  test_integration.py
tiny_graph_rag/: __init__.py  config.py
tiny_graph_rag/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
tiny_graph_rag/extraction/: prompts.py
tiny_graph_rag/graph/: __init__.py  builder.py  entity_resolution.py  models.py
