[project]
name = "tiny-graph-rag"
version = "0.1.0"
description = "A naive implementation of Graph-based RAG using OpenAI API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pyvis>=0.3.2",
    "streamlit>=1.30.0",
    "streamlit-agraph>=0.0.45",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tiny-graph-rag = "main:main"

[tool.setuptools.packages.find]
include = ["tiny_graph_rag*"]
